--- a/portal-it-ingesco-complet.html
+++ b/portal-it-ingesco-complet.html
@@ -527,6 +527,7 @@
             <nav class="nav-links">
                 <a href="#guies">📚 Guies</a>
                 <a href="#productes">⚡ Productes</a>
+                <a href="https://joseprico.github.io/portal-it/mapa_parallamps_complet.html" target="_blank">📍 Mapa Parallamps</a>
                 <a href="https://chatgpt.com/g/g-695504e3176081919dba33057f4f3a37-ingesco-ia" target="_blank">🧠 IA INGESCO</a>
                 <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=O18QWqHwwEuTMopJiTIcyUs0CIBagtBDjhAS2DLf-IRUMVQ0UUFKQzhSTkpNUFlJTkNQMFA2RDdVQS4u" target="_blank">🎫 Crear Ticket</a>
             </nav>
@@ -551,6 +552,7 @@
         <div class="hero-buttons">
             <a href="https://chatgpt.com/g/g-695504e3176081919dba33057f4f3a37-ingesco-ia" target="_blank" class="btn btn-primary">🧠 Parlar amb la IA d'INGESCO</a>
             <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=O18QWqHwwEuTMopJiTIcyUs0CIBagtBDjhAS2DLf-IRUMVQ0UUFKQzhSTkpNUFlJTkNQMFA2RDdVQS4u" target="_blank" class="btn btn-secondary">🎫 Crear Ticket (si la IA no resol)</a>
+            <a href="https://joseprico.github.io/portal-it/mapa_parallamps_complet.html" target="_blank" class="btn btn-secondary">📍 Mapa de Parallamps</a>
         </div>
     </section>
 
@@ -863,7 +865,7 @@
         <div class="footer-links">
             <a href="https://www.ingesco.com">Web INGESCO</a>
             <a href="https://www.ingesco.com/es/catalogo">Catàleg</a>
-            <a href="mailto:it@ingesco.com">Contactar IT</a>
+            <a href="/cdn-cgi/l/email-protection#fc9588bc95929b998f9f93d29f9391">Contactar IT</a>
             <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=O18QWqHwwEuTMopJiTIcyUs0CIBagtBDjhAS2DLf-IRUMVQ0UUFKQzhSTkpNUFlJTkNQMFA2RDdVQS4u" target="_blank">🎫 Crear Ticket</a>
             <a href="https://chatgpt.com/g/g-695504e3176081919dba33057f4f3a37-ingesco-ia" target="_blank">🧠 IA INGESCO</a>
         </div>
@@ -871,6 +873,4 @@
     </footer>
 
     <!-- Back to Top -->
-    <a href="#" class="back-to-top">↑</a>
-</body>
-</html>
+    <a href="#" class="
