--- a/mapa_parallamps_complet.html
+++ b/mapa_parallamps_complet.html
@@ -675,21 +675,21 @@
             }
         };
         
-        // Catàleg de productes
+        // Catálogo de productos
         const productCatalog = {
-            piezaAdapt: { name: 'Peça adapt. 1\'1/4" Ø20 rodó', ref: '111011', price: 60.90, disc1: '30+5', disc2: '40+5' },
-            mastil6m: { name: 'Màstil 6m Ø1\'1/2"+ Ø1\'1/4 Ac. Galv.', ref: '114065', price: 226.60, disc1: '30+5', disc2: '40+5' },
-            mastil4m: { name: 'Màstil 4m Ø1\'1/2"+ Ø1\'1/4 Ac. Galv.', ref: '114045', price: 180.00, disc1: '30+5', disc2: '40+5' },
-            anclaje: { name: 'Ancoratge Placa V6 15 Ø1\'1/4"-2"', ref: '112158', price: 72.10, disc1: '30+0', disc2: '40+0' },
-            abrazadera: { name: 'Abraç. abat. M8 cable 50-70mm²', ref: '118109', price: 6.00, disc1: '30+0', disc2: '40+0' },
-            contador: { name: 'Comptador de llamps CDR-11', ref: '430019', price: 359.90, disc1: '40+7', disc2: '50+7' },
-            tuboProtec: { name: 'Tub protecció Ac. Galv. 2m Ø32mm', ref: '119109', price: 28.50, disc1: '30+0', disc2: '40+0' },
-            senal: { name: 'Senyalització parallamps PVC', ref: '256003', price: 33.30, disc1: '30+5', disc2: '40+5' },
-            arqueta: { name: 'Arqueta sense fons 30x30 tapa PP', ref: '253058', price: 66.50, disc1: '40+7', disc2: '50+7' },
-            barraEquip: { name: 'Barra equipot. arqueta 3 borns', ref: '250027', price: 43.90, disc1: '30+0', disc2: '40+0' },
-            pica: { name: 'Pica Ac. Coure 2m Ø14,2mm 254µm', ref: '252124', price: 36.70, disc1: '10+10', disc2: '20+10' },
-            cableCobre: { name: 'Cable coure nu 50mm² (per metre)', ref: '116050', price: 12.50, disc1: '30+0', disc2: '40+0' },
-            protectorTri: { name: 'Protector sobretensions T1+T2 3F', ref: '370242', price: 392.00, disc1: '40+7', disc2: '50+7' }
+            piezaAdapt: { name: 'Pieza adapt. 1\'1/4" Ø20 redondo', ref: '111011', price: 60.90, disc1: '30+5', disc2: '40+5' },
+            mastil6m: { name: 'Mástil 6m Ø1\'1/2"+ Ø1\'1/4 Ac. Galv.', ref: '114065', price: 226.60, disc1: '30+5', disc2: '40+5' },
+            mastil4m: { name: 'Mástil 4m Ø1\'1/2"+ Ø1\'1/4 Ac. Galv.', ref: '114045', price: 180.00, disc1: '30+5', disc2: '40+5' },
+            anclaje: { name: 'Anclaje Placa V6 15 Ø1\'1/4"-2"', ref: '112158', price: 72.10, disc1: '30+0', disc2: '40+0' },
+            abrazadera: { name: 'Abraz. abat. M8 cable 50-70mm²', ref: '118109', price: 6.00, disc1: '30+0', disc2: '40+0' },
+            contador: { name: 'Contador de rayos CDR-11', ref: '430019', price: 359.90, disc1: '40+7', disc2: '50+7' },
+            tuboProtec: { name: 'Tubo protección Ac. Galv. 2m Ø32mm', ref: '119109', price: 28.50, disc1: '30+0', disc2: '40+0' },
+            senal: { name: 'Señalización pararrayos PVC', ref: '256003', price: 33.30, disc1: '30+5', disc2: '40+5' },
+            arqueta: { name: 'Arqueta sin fondo 30x30 tapa PP', ref: '253058', price: 66.50, disc1: '40+7', disc2: '50+7' },
+            barraEquip: { name: 'Barra equipot. arqueta 3 bornes', ref: '250027', price: 43.90, disc1: '30+0', disc2: '40+0' },
+            pica: { name: 'Pica Ac. Cobre 2m Ø14,2mm 254µm', ref: '252124', price: 36.70, disc1: '10+10', disc2: '20+10' },
+            cableCobre: { name: 'Cable cobre desnudo 50mm² (por metro)', ref: '116050', price: 12.50, disc1: '30+0', disc2: '40+0' },
+            protectorTri: { name: 'Protector sobretensiones T1+T2 3F', ref: '370242', price: 392.00, disc1: '40+7', disc2: '50+7' }
         };
         
         // Estado actual (para nuevos pararrayos)
