--- a/mapa_parallamps_complet.html
+++ b/mapa_parallamps_complet.html
@@ -1874,7 +1874,7 @@
                     doc.setTextColor(255, 255, 255);
                     doc.setFontSize(16);
                     doc.setFont('helvetica', 'bold');
-                    doc.text('Llista de Materials', 15, 15);
+                    doc.text('Lista de Materiales', 15, 15);
                     doc.setFontSize(9);
                     doc.setFont('helvetica', 'normal');
                     doc.text(`Ref: ${clientRef}`, pageWidth - 15, 15, { align: 'right' });
@@ -1978,7 +1978,7 @@
                     doc.setTextColor(255, 255, 255);
                     doc.setFontSize(9);
                     doc.setFont('helvetica', 'bold');
-                    doc.text('PROTECCIÓ INTERNA (Recomanada segons RBT ITC-BT-23)', 17, y + 5.5);
+                    doc.text('PROTECCIÓN INTERNA (Recomanada segons RBT ITC-BT-23)', 17, y + 5.5);
                     
                     y += 12;
                     doc.setFillColor(250, 250, 250);
@@ -1996,7 +1996,7 @@
                     doc.setFont('helvetica', 'italic');
                     doc.setFontSize(7);
                     doc.setTextColor(100, 100, 100);
-                    doc.text('Segons normativa UNE 21186:2011, NFC 17-102:2011, IEC 62305 i CTE DB SUA-8.', 15, y);
+                    doc.text('Según normativa UNE 21186:2011, NFC 17-102:2011, IEC 62305 i CTE DB SUA-8.', 15, y);
                     y += 4;
                     doc.text('INGESCO - Cardener 5, 08223 Terrassa (Barcelona) - Tel: 937 360 305 - ingesco.com', 15, y);
                 }
